- Ecran d'accueil type Splash (revoir pour une meilleure animation) - Début écran création de compte (revoir le passage d'une activité à l'autre) - Design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">AndroidKotlin</string>
+    <string name="Password">Password</string>
+    <string name="Password2">Confirm your password</string>
+    <string name="surname">Surname</string>
+    <string name="Name">Name</string>
+    <string name="email">Email</string>
 </resources>
