- Détail : OK - Design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="surname">Surname</string>
     <string name="Name">Name</string>
     <string name="email">Email</string>
+    <string name="home">Home</string>
+    <string name="back">Back</string>
+    <string name="settings">Settings</string>
 </resources>
