--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="home">Home</string>
     <string name="back">Back</string>
     <string name="settings">Settings</string>
+    <string name="Search">Search</string>
+    <string name="details">DETAILS CRYPTO</string>
 </resources>
