--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,14 @@
     <string name="settings">Settings</string>
     <string name="Search">Search</string>
     <string name="details">DETAILS CRYPTO</string>
+    <string name="back_button">back</string>
+    <string name="price">Price USD :</string>
+    <string name="rank">Rank :</string>
+    <string name="name">Name :</string>
+    <string name="symbol">Symbol :</string>
+    <string name="Create_your_account">Create your account</string>
+    <string name="sign_up">SIGN UP</string>
+    <string name="Login">Login</string>
+    <string name="Crypto">CRYPTO</string>
+    <string name="Hub">HUB</string>
 </resources>
